manifests/02_green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: translation-api-green
    labels:
        app.kubernetes.io/name: translation-api-green
        app.kubernetes.io/version: 0.0.2
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: translation-api-green
            app.kubernetes.io/version: 0.0.2
    template:
        metadata:
            name: translation-api-green
            labels:
                app.kubernetes.io/name: translation-api-green
                app.kubernetes.io/version: 0.0.2
        spec:
            containers:
                - name: translation-api
                  image: translation-api:0.0.2
                  ports:
                      - containerPort: 8080
                  livenessProbe:
                      httpGet:
                          path: /version
                          port: 8080
                          scheme: "HTTP"
                      periodSeconds: 3
                      initialDelaySeconds: 5
                      timeoutSeconds: 1
                      failureThreshold: 5
