manifests/03_translation_api_service_switch.yaml
apiVersion: v1
kind: Service
metadata:
    name: translation-api
spec:
    selector:
        app.kubernetes.io/name: translation-api-green
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
