manifests/01_app_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: translation-api-blue
    labels:
        app.kubernetes.io/name: translation-api-blue
        app.kubernetes.io/version: 0.0.1
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: translation-api-blue
            app.kubernetes.io/version: 0.0.1
    template:
        metadata:
            name: translation-api-blue
            labels:
                app.kubernetes.io/name: translation-api-blue
                app.kubernetes.io/version: 0.0.1
        spec:
            containers:
                - name: translation-api
                  image: translation-api:0.0.1
                  ports:
                      - containerPort: 8080
                  # env:
                  #     - name: REDIS_ADDR
                  #       value: redis.translation-api-redis.default.svc.cluster.local
                  livenessProbe:
                      httpGet:
                          path: /version
                          port: 8080
                          scheme: "HTTP"
                      periodSeconds: 3
                      initialDelaySeconds: 5
                      timeoutSeconds: 1
                      failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
    name: translation-api
spec:
    selector:
        app.kubernetes.io/name: translation-api-blue
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: translation-api
spec:
    ingressClassName: nginx
    rules:
        - host: translationapi.localtest.me
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                      service:
                          name: translation-api
                          port:
                              number: 8080
